--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.joestelmach</groupId>
-  <artifactId>natty</artifactId>
+  <artifactId>natty.antlrV32</artifactId>
   <packaging>jar</packaging>
   <version>0.10-SNAPSHOT</version>
   <name>Natty Date Parser</name>
-  <description>natural language date parser</description>
+  <description>natural language date parser.
+      This one uses in-place and repackaged version of the library antlr-runtime 3.2
+      so that it does not conflict with ANTLR version 3.5 we need to use for Elastic Search
+  </description>
   <url>http://natty.joestelmach.com</url>
   
   <licenses>
@@ -45,7 +48,7 @@
   </developers>
   
   <properties>
-    <grammar.dir>${basedir}/src/main/antlr3/com/joestelmach/natty/generated-new</grammar.dir>
+    <grammar.dir>${basedir}/src/main/antlr3/com/joestelmach/natty/generated</grammar.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -237,13 +240,7 @@
   
   <!-- dependencies -->
   <dependencies>
-    <!--<dependency>-->
-      <!--&lt;!&ndash;com/spark/spark-antlr-runtime/3.2.1/spark-antlr-runtime-3.2.1&ndash;&gt;-->
-      <!--<groupId>com.spark</groupId>-->
-      <!--<artifactId>spark-antlr-runtime</artifactId>-->
-      <!--<version>3.2.1</version>-->
-    <!--</dependency> -->
-    
+
     <dependency>
       <groupId>org.mnode.ical4j</groupId>
       <artifactId>ical4j</artifactId>
@@ -263,6 +260,7 @@
           <version>3.2</version>
       </dependency>
 
+      <!-- TODO: think about how to run these without pulling in ANTLR runtime again -->
       <!--<dependency> -->
       <!--<groupId>org.antlr</groupId>-->
       <!--<artifactId>gunit</artifactId>-->
