--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .settings
 .project
 .idea
-.idea/misc.xml
 workspace.xml
 bin
 target
@@ -10,3 +9,4 @@ src/main/java/com/joestelmach/natty/generated-new/*
 src/main/java/*.tokens
 src/main/antlr3/com/joestelmach/natty/generated-new/DebugDateParser.g
 src/main/antlr3/com/joestelmach/natty/generated-new/DebugDateWalker.g
+src/main/java/com/joestelmach/natty/generated/
